--- a/FindowsWormsApp/FindowsWormsApp/SudokuSolverForms.csproj
+++ b/FindowsWormsApp/FindowsWormsApp/SudokuSolverForms.csproj
@@ -6,6 +6,11 @@
     <Nullable>enable</Nullable>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
+    <ApplicationIcon>Resources\SudokuSolverIcon.ico</ApplicationIcon>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\SudokuSolverIcon.ico" />
+  </ItemGroup>
 
 </Project>
