--- a/FindowsWormsApp/FindowsWormsApp/SudokuSolverForms.csproj
+++ b/FindowsWormsApp/FindowsWormsApp/SudokuSolverForms.csproj
@@ -7,6 +7,7 @@
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <ApplicationIcon>Resources\SudokuSolverIcon.ico</ApplicationIcon>
+    <RootNamespace>SudokuSolverForms</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
